--- a/magia.ipynb
+++ b/magia.ipynb
@@ -29,6 +29,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "He plasmado todos los datos dentro de archivos CSV, que están en la carpeta [\"data\"](data/), por lo que ahora para cargarlos sólo hay que crear un DataFrame de Pandas vacío y juntar en él los datos de todos los archivos. Un bucle \"for\" nos hace el trabajo independientemente de que agregue más archivos en un futuro"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -69,7 +77,7 @@
    "outputs": [],
    "source": [
     "for a, n in markdown.items():\n",
-    "    dataset.iloc[:, 1] = dataset.iloc[:, 1].str.replace(a, n)\n"
+    "    dataset[1] = dataset[1].str.replace(a, n)"
    ]
   },
   {
@@ -128,6 +136,7 @@
     "checkpointer = tf.keras.callbacks.ModelCheckpoint(\n",
     "    filepath=\"./checkpoints/model.hdf5\"\n",
     "    monitor=\"val_loss\"\n",
+    "    mode=min\n",
     "    save_best_only=True\n",
     ")"
    ]
@@ -137,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Éste objeto de Keras se encarga de ir guardando el modelo en mitad del entrenamiento. Al no tener ninguna variable el nombre (aunque se le podrían poner), el "
+    "Éste objeto de Keras se encarga de ir guardando el modelo en mitad del entrenamiento. Al no tener ninguna variable el nombre (aunque se le podrían poner), en la ruta sólo va a haber un modelo siempre, y gracias al resto de parámetros, siempre será el que haya sacado la pérdida de validación (val_loss) más baja"
    ]
   }
  ],
