--- a/magia.ipynb
+++ b/magia.ipynb
@@ -134,7 +134,7 @@
    "outputs": [],
    "source": [
     "checkpointer = tf.keras.callbacks.ModelCheckpoint(\n",
-    "    filepath=\"./checkpoints/model.hdf5\"\n",
+    "    filepath=\"./checkpoints/model.tf\"\n",
     "    monitor=\"val_loss\"\n",
     "    mode=min\n",
     "    save_best_only=True\n",
