--- a/magia.ipynb
+++ b/magia.ipynb
@@ -25,7 +25,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cargar datos"
+    "## Datos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cargar"
    ]
   },
   {
@@ -33,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "He plasmado todos los datos dentro de archivos CSV, que están en la carpeta [\"data\"](data/), por lo que ahora para cargarlos sólo hay que crear un DataFrame de Pandas vacío y juntar en él los datos de todos los archivos. Un bucle \"for\" nos hace el trabajo independientemente de que agregue más archivos en un futuro"
+    "He plasmado todos los datos dentro de archivos CSV, que están en la carpeta [\"data\"](data/), por lo que ahora para cargarlos sólo hay que crear un DataFrame de Pandas vacío y juntar en él los datos de todos los archivos. Un bucle \"for\" nos hace el trabajo independientemente de cuántos archivos estén (Siempre y cuando todos tengan la misma estructura claro, pero estoy cuidando eso)"
    ]
   },
   {
@@ -44,8 +51,9 @@
    "source": [
     "dataset = pd.DataFrame()\n",
     "\n",
-    "for file in os.listdir(\"./data\"):\n",
-    "    dataset = pd.concat([dataset, pd.read_csv(os.path.join(\"./data\", file), delimiter=\",\", quotechar='\"', header=None)])"
+    "for archivo in os.listdir(\"./data\"):\n",
+    "    if archivo.endswith(\".csv\"):\n",
+    "        dataset = pd.concat([dataset, pd.read_csv(os.path.join(\"./data\", archivo), delimiter=\",\", quotechar='\"', header=None)])"
    ]
   },
   {
@@ -53,62 +61,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ya que es interesante que las respuestas tengan elementos escritos en MarkDown, pero no se pueden guardar en CSV, ésta es la solución:\n",
-    "- Creamos una \"sintaxis\" nueva en la que representamos los elementos con otros caracteres que sí podamos tener en CSV\n",
-    "- Definimos esa sintaxis en un diccionario dentro del código, guardando cada representación junto con su elemento\n",
-    "- Usamos un bucle for para reemplazar todo en el DataFrame, ya que en el CSV no podíamos tenerlos pero en el DataFrame sí"
+    "### Procesar"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "markdown = {\n",
-    "    \"&001\": \"\\n\"\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for a, n in markdown.items():\n",
-    "    dataset[1] = dataset[1].str.replace(a, n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                    ¿Qué es una reliquia?  \\\n",
-      "0  ¿Qué puedes conseguir de una reliquia?   \n",
-      "0                                     NaN   \n",
-      "\n",
-      "  Si has jugado otros juegos, por suerte o por desgracia sabrás que hay unas cajas que compras por dinero real y te pueden tocar elementos aleatorios del juego. Bien, Warframe tiene un elemento similar pero que no es de pago; las reliquias  \\\n",
-      "0  Lo más \"exclusivo\" que pueden darte son piezas...                                                                                                                                                                                              \n",
-      "0                                                NaN                                                                                                                                                                                              \n",
-      "\n",
-      "     ¿Qué modelo eres?  \\\n",
-      "0                  NaN   \n",
-      "0  ¿Quién te ha hecho?   \n",
-      "\n",
-      "  Soy Cephalon X, el céfalon más inteligente hasta la fecha. He sido diseñado para responder a todas las preguntas que el sistema origen te haya hecho cuestionarte. Por favor, siéntete libre de preguntar lo que quieras  \n",
-      "0                                                NaN                                                                                                                                                                        \n",
-      "0  Mi creador se llama Samuel, pero la verdad es ...                                                                                                                                                                        \n"
-     ]
-    }
-   ],
-   "source": [
-    "print(dataset)"
+    "El método para almacenar los datos funciona, pero ello no implica que un modelo pueda entenderlos. Deben ser tokenizados, para ello Keras lleva un tokenizador y nos sirve con los datos así como los he guardado"
    ]
   },
   {
