--- a/magia.ipynb
+++ b/magia.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,6 +54,33 @@
     "for archivo in os.listdir(\"./data\"):\n",
     "    if archivo.endswith(\".csv\"):\n",
     "        dataset = pd.concat([dataset, pd.read_csv(os.path.join(\"./data\", archivo), delimiter=\",\", quotechar='\"', header=None)])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ordenar aleatoriamente"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Es una buena práctica otorgarle al modelo los datos ordenados de manera aleatoria, y de hecho por cómo estamos cargando los datos tenemos una adicional:\n",
+    "- El modelo no aprende patrones raros en función del orden en el que reciba datos\n",
+    "- Al momento de reservar una parte para validación, nos aseguramos de que tanto en entrenamiento como en validación hay datos de todas las categorías"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = dataset.sample(frac=1).reset_index(drop=True)"
    ]
   },
   {
